# rank_files

./: README.md  pyproject.toml
src/rank_files/: __init__.py  algos.py  cache.py  cli.py  document.py  ranker.py  test_document.py
tests/: test_document.py  test_ranker.py
