[project]
name = "rank-files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacob Williams", email = "jacobaw@gmail.com" }
]
requires-python = ">=3.13.2"
dependencies = []

[project.scripts]
rank-files = "rank_files:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
